# Graphing-Calculator

./: .gitignore  CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  Iterator.h  List.h  README.md  Vector.h  VectorIter.h  adjustLocation_test.cpp  distrOp_test.cpp  edge_cases_test.cpp  equation.cpp  equation.hpp  getVal_test.cpp  grapharea.cpp  grapharea.h  grapharea.ui  handleNoVars.hpp  handleOneVar.cpp  handleOneVar.hpp  handleParaNum_test.cpp  handlePara_test.cpp  handleVars.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  removeParenthesis.cpp  removeParenthesis.hpp  remove_spaces_test.cpp  unit_test.cpp
